welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:7: error: not found: value i
return nums(i)-n
            ^